fix: add toolbar height to fix QS button hiding issue on Safari browser

--- a/packages/bot-web-ui/src/pages/bot-builder/toolbar/toolbar.scss
+++ b/packages/bot-web-ui/src/pages/bot-builder/toolbar/toolbar.scss
@@ -10,7 +10,7 @@
     background-color: var(--general-main-1);
 
     @include mobile {
-        height: fit-content;
+        height: 64px;
         position: absolute;
         overflow-y: auto;
         inset-inline-start: 4rem;
